--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
   jackson:
-    default-property-inclusion: non_null # JSON处理时忽略非空字段
+  #    default-property-inclusion: non_null # JSON处理时忽略非空字段
   application:
     name: intelliStore-co-pic-helper
   # 数据源配置
