--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
   jackson:
-  #    default-property-inclusion: non_null # JSON处理时忽略非空字段
+      default-property-inclusion: non_null # JSON处理时忽略非空字段
   application:
     name: intelliStore-co-pic-helper
   # 数据源配置
@@ -15,6 +15,11 @@ spring:
     url: jdbc:mysql://localhost:3306/intelliStore_co_pic_helper
     username: root
     password: root
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
+    timeout: 5000
   servlet:
     multipart:
       max-file-size: 10MB
