day7-登录流程优化·初步JWT令牌校验和ThreadLocal环境

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.5.9</version>
         </dependency>
+        <!--    JWT -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
         <!--    Redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
